--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,76 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.soumya.narayan.aiqs</groupId>
-  <artifactId>auto-insurance-quote-system</artifactId>
-  <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>auto-insurance-quote-system Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>auto-insurance-quote-system</finalName>
-  </build>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.soumya.narayan.aiqs</groupId>
+	<artifactId>auto-insurance-quote-system</artifactId>
+	<packaging>war</packaging>
+	<version>1.0-SNAPSHOT</version>
+	<name>auto-insurance-quote-system Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+
+	<properties>
+
+		<maven.compiler.version>3.3</maven.compiler.version>
+		<java.version>1.8</java.version>
+
+		<javax.servlet.api.version>3.0.1</javax.servlet.api.version>
+		<org.springframework.version>4.0.4.RELEASE</org.springframework.version>
+
+		<junit.version>4.11</junit.version>
+	</properties>
+
+	<dependencies>
+	
+	
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>${javax.servlet.api.version}</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+	
+	</dependencies>
+	
+	<build>
+		<finalName>auto-insurance-quote-system</finalName>
+		
+		<plugins>
+		
+		
+			<!--  Maven Compiler Plugin :: configuring the java version -->
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.version}</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
+		
+		</plugins>		
+		
+		
+		
+	</build>
 </project>
+
+
+
+
+
+
