--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,13 @@
 		<java.version>1.8</java.version>
 
 		<javax.servlet.api.version>3.0.1</javax.servlet.api.version>
+		<javax.servlet.jsp.api.version>2.2.1</javax.servlet.jsp.api.version>
+		<javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
+
 		<org.springframework.version>4.0.4.RELEASE</org.springframework.version>
 		<org.springframework.data.version>1.8.0.RELEASE</org.springframework.data.version>
 		<org.springframework.security.version>4.0.0.RELEASE</org.springframework.security.version>
-		
+
 		<com.h2database.version>1.4.186</com.h2database.version>
 		<org.hibernate.version>5.0.0.Final</org.hibernate.version>
 		<com.mchange.c3p0.version>0.9.5</com.mchange.c3p0.version>
@@ -28,66 +31,78 @@
 	</properties>
 
 	<dependencies>
-	
-	
+
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>${javax.servlet.api.version}</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>javax.servlet.jsp-api</artifactId>
+			<version>${javax.servlet.jsp.api.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${javax.servlet.jstl.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>${com.h2database.version}</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 			<version>${org.springframework.data.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 			<version>${org.springframework.security.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
 			<version>${org.springframework.security.version}</version>
 		</dependency>
-		
+
 		<!-- Database dependencies -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>${org.hibernate.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.mchange</groupId>
 			<artifactId>c3p0</artifactId>
 			<version>${com.mchange.c3p0.version}</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-	
+
 	</dependencies>
-	
-	
+
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -99,15 +114,15 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	
+
 	<build>
 		<finalName>auto-insurance-quote-system</finalName>
-		
+
 		<plugins>
-		
-		
-			<!--  Maven Compiler Plugin :: configuring the java version -->
-			
+
+
+			<!-- Maven Compiler Plugin :: configuring the java version -->
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -117,7 +132,7 @@
 					<target>${java.version}</target>
 				</configuration>
 			</plugin>
-		
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
@@ -126,9 +141,9 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
-		
-		</plugins>		
-		
+
+		</plugins>
+
 	</build>
 </project>
 
